2008-07-17	Nick Schermer <nick@xfce.org>

	* exo-csource/main.c: Don't strip text between nodes 
	  with --strip-content. This will make stripping work
	  on glade files.
	* configure.in.in: Version bump from 0.3.7 to 0.3.7.1.

2007-12-02	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2007-12-02	Benedikt Meurer <benny@xfce.org>

	* === Released 0.3.4 ===
	* NEWS, configure.in.in: Bump version.
	* THANKS: Update translator credits.
	* po/*.po: Update Project-Id-Version.
	* docs/reference/Makefile.am: Fix dist building.

2007-07-20	Benedikt Meurer <benny@xfce.org>

	* exo/exo-mount-point.c: Fix build on Solaris.

2007-05-22	Benedikt Meurer <benny@xfce.org>

	* configure.in.in, exo/exo-string.{c,h}, exo/exo.symbols: Add new
	  function exo_strdup_strftime(), which is an UTF-8 aware wrapper
	  for strftime().
	* docs/reference/: Update reference manual.

2007-05-22	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Prefer -lmd over -lmd5.
	* docs/reference/: Update reference manual.

2007-05-20	Benedikt Meurer <benny@xfce.org>

	* exo-csource/main.c: Add support to strip comments and node contents
	  from XML files. Based on patch from Nick Schermer <nick@xfce.org>.
	  Bug #3094.
	* po/*.po, po/*.pot: Merge new strings.
	* po/de.po: Update german translations.

2007-05-09	Benedikt Meurer <benny@xfce.org>

	* INSTALL, configure.in.in: Update for latest autoconf.

2007-05-09	Benedikt Meurer <benny@xfce.org>

	* COPYING.LIB, COPYING, Makefile.am: Ship LGPL and GPL license
	  files. Bug #2895.

2007-02-17	Benedikt Meurer <benny@xfce.org>

	* exo/exo-config.h.in: Make sure EXO_PARAM_READABLE,
	  EXO_PARAM_WRITABLE and EXO_PARAM_READWRITE are properly set.

2007-02-12	Benedikt Meurer <benny@xfce.org>

	* exo/exo-mount-point.c: Fix compilation on Solaris 2.8. Bug #2798.

2007-02-12	Benedikt Meurer <benny@xfce.org>

	* configure.in.in, exo/exo-mount-point.c: Fix compilation on newer
	  NetBSD versions. Bug #2808.
