@@ -1,3 +1,8 @@
+2008-07-26	Jannis Pohlmann <jannis@xfce.org>
+
+	* autogen.sh: Add @REVISION@ substitution support for git svn 
+	  repositories.
+
 2008-07-17	Nick Schermer <nick@xfce.org>
 
 	* exo-csource/main.c: Don't strip text between nodes 
